# LayLow

./: CMakeLists.txt  Makefile  README.md  SRS.md
src/: analysis.c  analysis.h  bt_control.c  capture.c  common.h  main.c  raw2gray.c
src/camera/: capture.c  capture.h
src/common/: common.c  common.h
src/datastructures/: heap.c  heap.h
src/image-processing/: analysis.c  analysis.h  raw2gray.c  raw2gray.h
tests/: build_run_all_tests.sh  test_analysis.c  test_common.c  test_heap.c  test_png_write.c  test_raw2gray.c  test_ubuntu_dynamic_fail.c
